Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-10 (SVN):
    * re-diff'ed the optional standalone games patch after quakefs.c
      changes.
    * quakefs.c: Fixed a 'set but not used' warning in FS_Init(). Coding
      style cleanup.

2011-07-10 (SVN):
    * menu.c, net_comx.c: Did missing string constifications.

2011-07-10 (SVN):
    * net_main.c, net_dgrm.c: Added proper SERVERONLY ifdefs and removed
      the h2ded-specific extra copies. Removed the DEBUG build conditions
      around the unexpected reply address prints.

2011-07-10 (SVN):
    * hexen2 net: Added NO_LOOP_DRIVER and IS_LOOP_DRIVER macros and made
      the confusing loop driver checks more readable and flexible.

2011-07-10 (SVN):
    * hexen2/sv_main.c, hexenworld/server/sv_init.c: Refactored the code
      returning the full level name into new SV_GetLevelname() procedure.
    * server.h: Added prototype for SV_GetLevelname().
    * hexen2/host_cmd.c (Host_Map_f): Use SV_GetLevelname().
    * hexen2/host_cmd.c (Host_SavegameComment): Likewise.
    * hexen2/sv_main.c (SV_SendServerinfo): Likewise.
    * hexenworld/server/sv_ccmds.c (SV_Map_f): Likewise.
    * hexenworld/server/sv_user.c (SV_New_f): Likewise.

2011-07-10 (SVN):
    * README: updated web links.

2011-07-07 (SVN):
    * bspfile.h: Made the hexen2 and hw versions of MAX_MAP_CLIPNODES,
      MAX_MAP_PLANES and MAX_MAP_ENTSTRING values to mirror the ones
      defined in the mapping utilities, which are 65535, 16384 and 81920
      respectively. These changes doesn't affect anything at the game
      engine side. I still need to decide on what to do with differences
      in MAX_MAP_LEAFS values between all three of the files.

2011-07-07 (SVN):
    * model.h, gl_model.h (SURF_DRAWBLACK,SURF_TRANSLUCENT,SURF_DONTWARP,
      SURF_UNDERWATER): Eliminated opengl/software and hexen2/hexenworld
      versions' differences.  These surface draw flags are client-side